[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mujEPA"
version = "0.1.0"
description = "MuJEPA: Multimodal Joint-Embedding Predictive Architecture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "pytorch-lightning",
    "numpy",
    "matplotlib",
    "zarr",
    "einops",
    "einx",
    "loguru",
    "wandb",
    "scikit-image",
    "muvit",
    "lejepa @ git+https://github.com/galilai-group/lejepa.git",
]

[tool.setuptools]
packages = []

[project.optional-dependencies]
dev = [
    "pytest",
]
